Add: Where Conspiracy Theorists Steal Their Ideas From; Why You Can Never Argue with Conspiracy Theorists

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -238,6 +238,15 @@
           <i class="website">Aeon</i>, 15.12.2015 (Creative Commons).
           <!--@@reread/copy-->
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=Y4hpedzjQZ8">Where Conspiracy Theorists Steal Their Ideas From | Truth Hurts</a>
+          (<i class="ytchannel">Vice</i> on YouTube, 9 minutes, 06.01.2021).
+        </li>
+        <li>Tanz, Jason:
+          <a href="https://www.youtube.com/watch?v=3kJp8as4fE4">Why You Can Never Argue with Conspiracy Theorists | Argument Clinic</a>
+          (<i class="ytchannel">WIRED</i> on YouTube, 4 minutes, 17.06.2017).
+        </li>
+        <!--@@add "Suspicious Minds: Why We Believe Conspiracy Theories | ...": https://www.youtube.com/watch?v=wcL9YHJVV8M -->
       </ul>
     </section>
 
