Add more links about conspiracy theories (School of Life; Channel 4)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -246,6 +246,16 @@
           <a href="https://www.youtube.com/watch?v=3kJp8as4fE4">Why You Can Never Argue with Conspiracy Theorists | Argument Clinic</a>
           (<i class="ytchannel">WIRED</i> on YouTube, 4 minutes, 17.06.2017).
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=WoYjIDwbzLY">How to Resist Conspiracy Theories</a>
+          (<i class="ytchannel">The School of Life</i> on YouTube, 5 minutes, 19.04.2017).
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=JpInOs1Fyno">The psychology of why people believe conspiracy theories - explained by experts</a>
+          (<i class="ytchannel">Channel 4 News</i> on YouTube, 11 minutes, 31.05.2020).
+          <br />Channel 4 News talks to Elise Wang (Duke University), Viren Swami (Anglia Ruskin University), Quassim Cassam (Warwick University)
+          and Joe Uscinski (University of Miami, author of <i class="booktitle">American Conspiracy Theories</i>).
+        </li>
         <!--@@add "Suspicious Minds: Why We Believe Conspiracy Theories | ...": https://www.youtube.com/watch?v=wcL9YHJVV8M -->
       </ul>
     </section>
