--- a/science/index.html
+++ b/science/index.html
@@ -471,6 +471,14 @@
           <a href="https://www.cambridge.org/de/academic/subjects/general-science/series/shorter-science-and-civilisation-china">The Shorter Science and Civilisation in China</a>:
           a shortened version of the above published in 1995.
         </li>
+        <li>Carrier, Richard:
+          <i class="booktitle">Science Education in the Early Roman Empire</i>. Pitchstone Publishing, 2016. (224 pages)
+          <a href="https://www.pitchstonebooks.com/catalog/science-education-in-the-early-roman-empire"><abbr>ISBN</abbr> 9781634310901</a>.
+        </li>
+        <li>Carrier, Richard:
+          <i class="booktitle">The Scientist in the Early Roman Empire</i>. Pitchstone Publishing, 2017. (640 pages)
+          <a href="https://www.pitchstonebooks.com/catalog/the-scientist-in-the-early-roman-empire"><abbr>ISBN</abbr> 9781634311069</a>.
+        </li>
         <li>
           <a href="https://web.stanford.edu/class/history13/earlysciencelab/main/">Early Science Lab</a>,
           <i class="website">Stanford University</i>.
