Add: Haff: How Openn Source Ate Software

--- a/lijst.html
+++ b/lijst.html
@@ -680,7 +680,12 @@
         <i class="booktitle">Justice: What's the Right Thing to Do?</i>. Farrar, Strauss &amp; Giroux, 2010. (320 pages)
         <a href="https://us.macmillan.com/books/9780374532505"><abbr>ISBN</abbr> 9780374532505</a>.
       </li>
+      <li>Haff, Gordon:
+        <i class="booktitle">How Open Source Ate Software: Understand the Open Source Movement and So Much More</i>. Apress, 2018. (180 pages)
+        <a href="https://www.apress.com/us/book/9781484238936"><abbr>ISBN</abbr> 978-1-4842-3893-6</a>.
+      </li>
     </ul>
+  </section>
     <!--
     <section>
       <h2></h2>
@@ -698,7 +703,6 @@
       </ul>
     </section>
     -->
-  </section>
   <!--
     * Wasserstrom & Cunningham: China in the 21st Century: What Everyone Needs to Know. Third edition. OUP, April 2018: https://global.oup.com/academic/product/china-in-the-21st-century-9780190659080 
     * Christopher Goscha: Vietnam: A New History. Little, Brown & co. / Hachette, 2016 (592 pages) ISBN 9780465094370. https://www.hachettebookgroup.com/titles/christopher-goscha/vietnam/9780465094370/
