Add link to page on religion and faith

--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@ permalink: /404.html
         <ul>
           <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/learningphilosophy.html">Learning Philosophy</a></li>
           <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
-          <!--li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/religion.html">Religion and Faith</a></l>
           <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/kant.html">Immanuel Kant</a></li>
           <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
           <li><a href="http://cstrobbe.github.io/philosophy-and-science/philosophy/marx_karl.html">Karl Marx</a></li>
