--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -29,7 +29,7 @@
         <ul>
           <li class="active"><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
           <li><a href="../philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
-          <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="../philosophy/religion.html">Religion and Faith</a></li>
           <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
           <li><a href="../philosophy/marx_karl.html" lang="de">Karl Marx</a></li>
         </ul>
@@ -483,6 +483,10 @@
         <a href="https://aeon.co/opinions/to-see-philosophy-in-action-visit-a-primary-school-class">What primary school children can teach academic philosophers</a>
         by Peter Worley, <abbr>CEO</abbr> of the
         <a href="http://www.philosophy-foundation.org/">Philosophy Foundation</a>.
+      </li>
+      <li>Jahanbegloo, Ramin:
+        <i class="booktitle">Letters to a Young Philosopher</i>. Oxford University Press, 2017. (160 pages)
+        <a href="https://global.oup.com/academic/product/letters-to-a-young-philosopher-9780199480388"><abbr>ISBN</abbr> 9780199480388 (hardback)</a>.
       </li>
       <li>Appiah, Kwame Anthony:
         <a href="https://www.youtube.com/watch?v=44FQpKTEJ3M">What does a philosopher do?</a>
