--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -29,7 +29,7 @@
         <ul>
           <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
           <li><a href="../philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
-          <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
+          <li><a href="../philosophy/religion.html">Religion and Faith</a></li>
           <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
           <li><a href="../philosophy/marx_karl.html" lang="de">Karl Marx</a></li>
         </ul>
