Add: Irwin: Aristotle's First Principles

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1475,6 +1475,12 @@
             * James Marriott: "Review: Aristotle’s Way: How Ancient Wisdom Can Change Your Life by Edith Hall — what would he think of Facebook?" The Times, 21.04.2018 (paywalled)
           -->
         </li>
+        <li>Irwin, Terence:
+          <i class="booktitle">Aristotle's First Principles</i>. Oxford University Press, 1990. (720 pages)
+          <a href="https://global.oup.com/academic/product/aristotles-first-principles-9780198242901"><abbr>ISBN</abbr> 9780198242901</a>.
+          <br />From the publisher's book description:
+          <q>Aristotle's reliance on dialectic as a method of philosophy appears to conflict with his metaphysical realist view of his conclusions. This book explores Aristotle's philosophical method and the merits of his conclusions, and shows how he defends dialectic against the objection that it cannot justify a metaphysical realist's claims.</q>
+        </li>
         <li>
           <a href="https://www.c-span.org/video/?178939-1/aristotles-children">Aristotle's Children</a>,
           <i class="website">C-Span</i>, 26.10.2003 (video, 64 minutes):
