Add: Jullien: Politique de la décoïncidence

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1205,6 +1205,10 @@
           <i class="website">The Conversation</i>, 13.06.2016 (Creative Commons).
           <!--@@summarise / local copy; contains embedded YouTube video-->
         </li>
+        <li><span lang="fr">Jullien, François:
+          <i class="booktitle">Politique de la décoïncidence</i>. L'Herne,</span> 2020. (128 pages)
+          <a href="https://www.editionsdelherne.com/publication/politique-de-la-decoincidence/" hreflang="fr">><abbr>ISBN</abbr> Politique de la décoïncidence</a>.
+        </li>
       </ul>
 
       <h3>Philosophy of Mind</h3>
@@ -3177,6 +3181,10 @@
         <li>:
           <i class="booktitle"></i>.
           <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+        <li><span lang="fr">:
+          <i class="booktitle"></i>.</span>
+          <a href="" hreflang="fr">><abbr>ISBN</abbr> </a>.
         </li>
       </ul>
     </section>
