--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2072,6 +2072,20 @@
     </section>
 
     <section>
+      <h2>Culture and Identity</h2>
+      <ul>
+        <li><span lang="fr">Maalouf, Amin:
+          <i class="booktitle">Les identités meurtrières</i>. Grasset,</span> 1998. (216 pages)
+          <a href="https://www.grasset.fr/livres/les-identites-meurtrieres-9782246548812" hreflang="fr">><abbr>ISBN</abbr> 9782246548812</a>.
+        </li>
+        <li><span lang="fr">Jullien, François:
+          <i class="booktitle">Il n’y a pas d’identité culturelle</i>. L'Herne,</span> 2016. (104 pages)
+          <a href="https://www.editionsdelherne.com/publication/il-ny-a-pas-didentite-culturelle/" hreflang="fr">><abbr>ISBN</abbr> 9782851978295</a>.
+        </li>
+      </ul>
+    </section>
+
+    <section>
       <h2>Intellectual Impostures</h2>
       <ul>
         <li>In 1997, Alan Sokal &amp; Jean Bricmont published the book
@@ -2912,6 +2926,7 @@
           <a href="http://www.filosofico.net/" hreflang="it">FILOSOFICO.net</a>:
           website by the Italian philosopher <span lang="it">Diego Fusaro</span>.
         </li>
+        <!--@@Derrida (see also literary theory):-->
         <li>
           <a href="https://www.youtube.com/watch?v=HKJlSY0DBBA">Understanding Derrida, Deconstruction &amp; Of Grammatology</a>
           (<i class="ytchannel">Then &amp; Now</i> on YouTube, 17 minutes, 25.08.2017).
