--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2082,6 +2082,10 @@
           <i class="booktitle">Il n’y a pas d’identité culturelle</i>. L'Herne,</span> 2016. (104 pages)
           <a href="https://www.editionsdelherne.com/publication/il-ny-a-pas-didentite-culturelle/" hreflang="fr">><abbr>ISBN</abbr> 9782851978295</a>.
         </li>
+        <li><span lang="fr">Dartigues, Laurent:
+          <a href="https://upgrenoble.hypotheses.org/102" hreflang="fr">Heurs et malheurs de la logique identitaire</a>,</span>
+          <i class="website">Université populaire de Grenoble, le magazine</i>, 01.12.2016, updated on 14.01.2017.
+        </li>
       </ul>
     </section>
 
