Add: Bijbelvertalingen en concordanties - Afzonderlijke bijbelvertalingen

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1051,6 +1051,10 @@
           <a href="https://www.vlaamsebijbelstichting.be/?p=287" hreflang="nl">Bijbelvertalingen online</a>,
           <i class="website">Vlaamse Bijbelstichting</i></span> (no date).
         </li>
+        <li><span lang="nl">
+          <a href="https://www.vlaamsebijbelstichting.be/?page_id=7791" hreflang="nl">Bijbelvertalingen en concordanties - Afzonderlijke bijbelvertalingen</a>,
+          <i class="website">Vlaamse Bijbelstichting</i></span> (no date).
+        </li>
         <li>
           <a href="https://newchristianbiblestudy.org/">New Christian Bible Study</a>.
         </li>
