Add tweet by Dawkins on baby that died during baptism

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -863,6 +863,14 @@
           <q cite="https://twitter.com/RichardDawkins/status/1321421399173550081">President Macron shamelessly objects to the sacred right of Muslims to decapitate French citizens. A clear case of Islamophobic hate crime.</q>
           (<a href="https://twitter.com/RichardDawkins/status/1321421399173550081">Twitter, 28.10.2020</a>).
         </li>
+        <li>
+          <a href="https://twitter.com/RichardDawkins/status/1356587828357038080">Richard Dawkins, 02.02.2021</a>:
+          <q cite="https://twitter.com/RichardDawkins/status/1356587828357038080">But it’s all OK, don’t worry, he was baptised (in no uncertain terms) and therefore will go straight to heaven.</q>
+          <br />The tweet links to the article
+          <a href="https://universul.net/baby-dies-in-romania-after-being-immersed-in-baptism/">UPDATE. Baby dies in Romania after being immersed in baptism</a>
+          by Alison Mutler (<i class="website">Universul.net</i>, 01.02.2021).
+        </li>
+
         <li>Roth, Philip:
           <span lang="fr"><a href="https://www.monde-diplomatique.fr/mav/145/ROTH/54571" hreflang="fr">Plaidoyer athéiste</a>,
           <i class="magazine">Le Monde diplomatique</i></span>, February &mdash; March 2016.
