Add: Spezialwissen der Kultur - Endlich mal erklärt

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -1134,6 +1134,10 @@
             Old conference URL no longer available: http://www.humanities2017.org/en
           -->
         </li>
+        <li><span lang="de">
+          <a href="https://www.deutschlandfunk.de/spezialwissen-der-kultur-endlich-mal-erklaert.691.de.html?dram:article_id=473251" hreflang="de">Spezialwissen der Kultur - Endlich mal erklärt</a>,
+          <i class="website">Deutschlandfunk</i></span>, 20.03.2020.
+        </li>
         <li><!--@@temp @@move-->
           <a href="https://fivebooks.com/best-books/productivity-david-allen/">The best books on Productivity recommended by David Allen</a>,
           <i class="site">Five Books</i>, 22.08.2019.
@@ -1224,7 +1228,8 @@
           <a href=""><abbr>ISBN</abbr> </a>.
         </li>
         <li>
-          <a href=""></a>
+          <a href=""></a>,
+          <i class=""></i>,
         </li>
       </ul>
     </section>
