Add: Why Nobody is EVER Allowed to Move This Ladder

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -870,6 +870,13 @@
           <a href="https://universul.net/baby-dies-in-romania-after-being-immersed-in-baptism/">UPDATE. Baby dies in Romania after being immersed in baptism</a>
           by Alison Mutler (<i class="website">Universul.net</i>, 01.02.2021).
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=7nAZqPqlz1M">Why Nobody is EVER Allowed to Move This Ladder</a>
+          (<i class="ytchannel">RealLifeLore</i> on YouTube, 6 minutes, 04.05.2018).
+          <br />The <a href="https://en.wikipedia.org/wiki/Status_Quo_(Jerusalem_and_Bethlehem)#'Immovable_ladder'">immovable ladder</a>
+          is part of the status quo that six Christian religions agreed to in 1757. There have something been fights between representatives
+          of some of these religions, for example over moving a chair &hellip;
+        </li>
 
         <li>Roth, Philip:
           <span lang="fr"><a href="https://www.monde-diplomatique.fr/mav/145/ROTH/54571" hreflang="fr">Plaidoyer athéiste</a>,
