Add: Markus Gabriel: Solidarität ist genauso universal wie Freiheit oder Gleichheit

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -328,10 +328,48 @@
         <i class="website">Merion West</i>, 22.04.2020.
         <!--Referrer: Nigel Warburton / @philosophybites, 19.10.2020: https://twitter.com/philosophybites/status/1318076066687234049 -->
       </li>
+      <li><span lang="de">
+        <a href="https://www.deutschlandfunk.de/reihe-auf-der-suche-nach-dem-wir-teil-vii-solidaritaet-ist.911.de.html?dram:article_id=491701" hreflang="de">Reihe "Auf der Suche nach dem Wir" (Teil VII) - "Solidarität ist genauso universal wie Freiheit oder Gleichheit"</a>,
+        Markus Gabriel im Gespräch mit Karin Fischer, <i class="website">Deutschlandfunk</i>,</span> 07.02.2021.
+      </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Onora_O%27Neill">Onora Sylvia O'Neill</a> (Wikipedia).
       </li>
     </ul>
+  <!--
+  <section>
+    <h2></h2>
+    <ul>
+      <li><span lang="de">
+        <a href="" hreflang="de"></a>,
+        <i class=""></i>,</span>
+      </li>
+      <li>
+        <a href=""></a>:
+        <q cite=""></q>
+        <br />:
+        <a href=""></a>
+        <i class=""></i>,
+      </li>
+      <li>
+        <a href=""></a>,
+        <i class=""></i>,
+      </li>
+      <li>
+        <a href=""></a>
+        (<i class="ytchannel"></i> on YouTube, minutes, ).
+      </li>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      <li><span lang="nl">
+        <a href=""></a>,
+        <i class=""></i>,</span>
+      </li>
+    </ul>
+  </section>
+  -->
   </main>                           
 
   <footer>
