Add: Wolff: Why Read Marx Today

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -298,6 +298,10 @@
           <br />See also Fusaro's article
           <a href="https://www.westendverlag.de/kommentare/die-rueckkehr-eines-verdraengten/" hreflang="de" lang="de">Die Rückkehr eines Verdrängten</a>.
         </li>
+        <li>Wolff, Jonathan:
+          <i class="booktitle">Why Read Marx Today?</i> Oxford University Press, 2003. (144 pages)
+          <a href="https://global.oup.com/academic/product/why-read-marx-today-9780192805058"><abbr>ISBN</abbr> 9780192805058</a>.
+        </li>
         <li>Wolff, Richard D.:
           <i class="booktitle">Understanding Marxism</i>. Democracy at Work, 2018.
           <a href="https://www.democracyatwork.info/books#bookUM"><abbr>ISBN</abbr> 978-0-359-46702-0</a>.
