--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1039,7 +1039,7 @@
           of Yale University, who also published
           <a href="http://philosophy.yale.edu/publications/death">a book on the subject</a>.
           The course has 26 videos that are between 35 and 50 minutes long.
-          The course is also available on 
+          The course is also available on
           <a href="https://itunes.apple.com/us/course/death/id495056431">iTunes</a>
           (and some YouTube users made copies of the course, <abbr>e.g.</abbr>
           <a href="https://www.youtube.com/playlist?list=PLAE0091CF918182D0">Philosophy of Death</a>).
@@ -1051,6 +1051,10 @@
 
       <h3>Political Philosophy</h3>
       <ul>
+        <li>Wolff, Jonathan:
+          <i class="booktitle">An Introduction to Political Philosophy</i>. Third edition. Oxford University Press, 2015. (256 pages)
+          <a href="https://global.oup.com/academic/product/an-introduction-to-political-philosophy-9780199658015"><abbr>ISBN</abbr> 9780199658015</a>.
+        </li>
         <li>Wolff, Jonathan:
           <a href="https://fivebooks.com/best-books/jonathan-wolff-on-political-philosophy/">The best books on Political Philosophy</a>,
           <i class="website">Five Books</i>, February 2018.
@@ -1155,33 +1159,27 @@
         </li>
         <!--@@todo check more books from OUP: https://global.oup.com/academic/search?q=Political+Philosophy&cc=de&lang=en -->
         <li>Rowe, Christopher; Schofield, Malcolm (editors):
-          <i class="booktitle">The Cambridge History of Greek and Roman Political Thought</i>. The Cambridge History of Political Thought.
-          Cambridge University Press, 2005. (766 pages)
+          <i class="booktitle">The Cambridge History of Greek and Roman Political Thought</i>. The Cambridge History of Political Thought. Cambridge University Press, 2005. (766 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/classical-studies/ancient-philosophy/cambridge-history-greek-and-roman-political-thought?format=PB"><abbr>ISBN</abbr> 9780521616690</a>.
         </li>
         <li>Burns, J. H. (editor):
-          <i class="booktitle">The Cambridge History of Medieval Political Thought c.350–c.1450</i>. The Cambridge History of Political Thought.
-          Cambridge University Press, 1991. (818 pages)
+          <i class="booktitle">The Cambridge History of Medieval Political Thought c.350–c.1450</i>. The Cambridge History of Political Thought. Cambridge University Press, 1991. (818 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-medieval-political-thought-c350c1450?format=PB&amp;isbn=9780521423885"><abbr>ISBN</abbr> 9780521423885</a>.
         </li>
         <li>Burns, J. H. (editor):
-          <i class="booktitle">The Cambridge History of Political Thought 1450–1700</i>. The Cambridge History of Political Thought.
-          Cambridge University Press, 1994. (812 pages)
+          <i class="booktitle">The Cambridge History of Political Thought 1450–1700</i>. The Cambridge History of Political Thought. Cambridge University Press, 1994. (812 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-political-thought-14501700?format=PB"><abbr>ISBN</abbr> 9780521477727</a>.
         </li>
         <li>Goldie, Mark; Wokler, Robert (editors):
-          <i class="booktitle">The Cambridge History of Eighteenth-Century Political Thought</i>. The Cambridge History of Political Thought.
-          Cambridge University Press, 2016. (936 pages)
+          <i class="booktitle">The Cambridge History of Eighteenth-Century Political Thought</i>. The Cambridge History of Political Thought. Cambridge University Press, 2016. (936 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-eighteenth-century-political-thought?format=PB"><abbr>ISBN</abbr> 9781316630280</a>.
         </li>
         <li>Jones, Gareth Stedman; Claeys, Gregory (editors):
-          <i class="booktitle">The Cambridge History of Nineteenth-Century Political Thought</i>. The Cambridge History of Political Thought.
-          Cambridge University Press, 2013. (1162 pages)
+          <i class="booktitle">The Cambridge History of Nineteenth-Century Political Thought</i>. The Cambridge History of Political Thought. Cambridge University Press, 2013. (1162 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-nineteenth-century-political-thought?format=PB"><abbr>ISBN</abbr> 9781107676329</a>.
         </li>
         <li>Ball, Terence; Bellamy, Richard (editors):
-          <i class="booktitle">The Cambridge History of Twentieth-Century Political Thought</i>. The Cambridge History of Political Thought.
-          Cambridge University Press, 2006. (768 pages)
+          <i class="booktitle">The Cambridge History of Twentieth-Century Political Thought</i>. The Cambridge History of Political Thought. Cambridge University Press, 2006. (768 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-twentieth-century-political-thought?format=PB"><abbr>ISBN</abbr> 9780521691628</a>.
         </li>
         <li>Skinner, Quentin:
@@ -1208,6 +1206,18 @@
         <li><span lang="fr">Jullien, François:
           <i class="booktitle">Politique de la décoïncidence</i>. L'Herne,</span> 2020. (128 pages)
           <a href="https://www.editionsdelherne.com/publication/politique-de-la-decoincidence/" hreflang="fr">><abbr>ISBN</abbr> Politique de la décoïncidence</a>.
+        </li>
+        <li>
+          <a href="https://fivebooks.com/best-books/italian-political-philosophy-guglielmo-verdirame/">The best books on Italian Political Philosophy recommended by Guglielmo Verdirame</a>,
+          <i class="website">Five Books</i>, 04.01.2021.
+          <br />Verdirame recommends the following books:
+          <ul>
+            <li><i class="booktitle">Discourses on Livy</i> by Niccolo Machiavelli (translated by Harvey Mansfield and Nathan Tarcov),</li>
+            <li><i class="booktitle">The New Science of Giambattista Vico: Unabridged Translation of the Third Edition (1744)</i> by by Giambattista Vico (translated by Max Harold Fisch and Thomas Goddard Bergin),</li>
+            <li><i class="booktitle">The History of European Liberalism</i> by Guido de Ruggieor (translated R. G. Collingwood),</li>
+            <li><i class="booktitle">Prison Notbooks</i> by Antonio Gramsci (translated by Joseph A. Buttigieg and Antonio Callari),</li>
+            <li><i class="booktitle">Liberalism and Democracy</i> by Nortberto Bobbio (translated by Martin Ryle and Kate Soper).</li>
+          </u:>
         </li>
       </ul>
 
@@ -2097,6 +2107,13 @@
         <li><span lang="fr">Dartigues, Laurent:
           <a href="https://upgrenoble.hypotheses.org/102" hreflang="fr">Heurs et malheurs de la logique identitaire</a>,</span>
           <i class="website">Université populaire de Grenoble, le magazine</i>, 01.12.2016, updated on 14.01.2017.
+        </li>
+        <li><span lang="fr">Le Bras, Hervé:
+          <i class="booktitle">Malaise dans l'identité</i>. Actes Sud</span>, 2017. (112 pages)
+          <a href="https://actes-sud.fr/node/58521" hreflang="fr">><abbr>ISBN</abbr> 978-2-330-07518-7</a>.
+          <br />From the publisher's book description:
+          <q lang="fr">Peut-on définir l’identité nationale sans exclure certains Français ? En reprenant un à un les critères utilisés par Ernest Renan dans sa célèbre conférence sur la nation – race, moeurs, religion, langue –, Hervé Le Bras montre que c’est impossible. Si l’on veut à tout prix sauver la notion d’identité, elle doit être fondée sur une culture ouverte au monde et à ses mutations, celle grâce à laquelle la France s’est construite au fil des siècles. (&hellip;)</q>
+          <!--Le Bras also criticsed the concept of "grand remplacement".-->
         </li>
       </ul>
     </section>
