Add: Best science book ever (Wikipedia)

--- a/science/index.html
+++ b/science/index.html
@@ -1582,6 +1582,10 @@
           He is the creator, writer, and host of the YouTube show Cracked Science, which uses a late-night deep-dive format to debunk pseudoscience and denounce bad science.
           With cardiologist Dr. Christopher Labos, he co-hosts the award-winning medical podcast The Body of Evidence, which aims to contextualize findings in the realm of health research and answer the public's most pressing questions about the biomedical sciences while also being funny and entertaining.</q>
         </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Best_science_book_ever">Best science book ever</a>,
+          <i class="wiki">Wikiepdia</i>.
+        </li>
       </ul>
     </section>
     <!--
