Add: UNESCO: Philosophy Manual

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -568,6 +568,11 @@
         (<i class="ytchannel">R. C. Waldun</i> on YouTube, 18 minutes, 21.20.2020).
         <!--@@summarise. Not exclusively or specifically about philosophy, but relevant.-->
       </li>
+      <li>Chanthalangsy, Phinith; Crowley, John:
+        <i class="booktitle">Philosophy Manual: A South-South Perspective</i>. <abbr>UNESCO</abbr>, 2014. (243 pages)
+        <a href="https://unesdoc.unesco.org/ark:/48223/pf0000228411"><abbr>ISBN</abbr> 978-92-3-101006-4</a>.
+        (Also available in French: <a href="https://unesdoc.unesco.org/ark:/48223/pf0000228412" lang="fr">Manuel de philosophie: une perspective Sud-Sud</a>.)
+      </li>
     </ul>
 
     <!--
