--- a/humanities/index.html
+++ b/humanities/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
-  <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <!--meta charset="utf-8" /--><!--Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
   <title>Humanities | Philosophy and Science</title>
   <link rel="stylesheet" type="text/css" media="screen" href="../css/s_124085_triad.css" title="Three-colour scheme" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
@@ -548,6 +548,10 @@
           is a reference work with entries on literary critics and theorists, critical schools and movements, etcetera.
           Access requires a
           <a href="http://litguide.press.jhu.edu/about/plans_and_pricing.html">paid subscription</a>.
+        </li>
+        <li><span lang="nl">
+          <a href="https://dbnl.org/tekst/dela012alge01_01/index.php" hreflang="nl">Algemeen letterkundig lexicon</a>,
+          <i class="website"><abbr>dbnl</abbr> · digitale bibliotheek voor de Nederlandse letteren</i></span>.
         </li>
         <li>L. Kip Wheeler:
           <a href="http://web.cn.edu/kwheeler/lit_terms.html">Literary Vocabulary</a>:
@@ -1234,20 +1238,14 @@
       </ul>
     </section>
     -->
-
   </main>
-
   <footer>
     <p class="licence">
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
-      alt="Creative Commons License" style="border-width:0" 
-      src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />
-      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
-      property="dct:title" rel="dct:type">Philosophy and Science</span> by 
-      <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cstrobbe" property="cc:attributionName" 
-      rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a 
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
-      lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
+      <br />
+      <span>Philosophy and Science</span> by
+      <a href="https://github.com/cstrobbe">Christophe Strobbe</a> is licensed under a
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
   </footer>
 </body>
