--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1788,6 +1788,18 @@
         </li>
       </ul>
 
+      <h3>Theodor W. Adorno (1903 – 1969)</h3>
+      <ul>
+        <li>
+          <a href="https://www.marxists.org/reference/archive/adorno/index.htm">Theodor Adorno Archive</a>,
+          <i class="website">Marxists Internet Archive</i>.
+        </li>
+        <li><span lang="de">
+          <a href="http://www.ifs.uni-frankfurt.de/forschung/die-frankfurter-seminare-theodor-w-adornos-edition-und-publikation-der-gesammelten-sitzungsprotokolle-1949-1969/" hreflang="de">Die Frankfurter Seminare Theodor W. Adornos. Edition und Publikation der Gesammelten Sitzungsprotokolle 1949–1969</a>,
+          <i class="website">IfS – Institut für Sozialforschung an der Johann Wolfgang Goethe-Universität</i>,</span> (project, 2014&ndash;2017).
+        </li>
+      </ul>
+
       <h3>Hannah Arendt (1906 – 1975)</h3>
       <ul>
         <li>Hill, Samantha Rose:
