Add: Krempl: Automatische Entscheidungen per Algorithmus

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
-  <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Machine Learning and Artificial Intelligence | Philosophy and Science</title>
   <link rel="stylesheet" type="text/css" media="screen" href="../css/s_124085_triad.css" title="Three-colour scheme" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
@@ -551,7 +550,7 @@
         Linear algebra involves the manipulation of matrices. You need descriptive statistics to better understand the data, normalise the data, etcetera.
         When you have built a model, you need calculus to reduce the arrow function.
         Giles presents several resources for learning these skills, for example the book
-        <a href="https://duckduckgo.com/?q=%22mathematical+methods+for+science+students%22&t=ffab&ia=products"><i class="booktitle">Mathematical Methods for Science Students</i></a>
+        <a href="https://duckduckgo.com/?q=%22mathematical+methods+for+science+students%22&amp;t=ffab&amp;ia=products"><i class="booktitle">Mathematical Methods for Science Students</i></a>
         by G. Stephenson (1961; good for linear algebra and calculus),
         <a href="http://greenteapress.com/thinkstats2/html/index.html"><i class="booktitle">Think Stats: Exploratory Data Analysis in Python</i></a>
         by Allen B. Downey (a very accessible introduction to Python and statistics, freely available online),
@@ -852,7 +851,7 @@
         They then let the program output sentences at increasing levels of &ldquo;word-choice creativity&rdquo;.
         The resulting speeches are nonsensical, especially at the higher levels of word-choice creativity.
         One of the comments on the video says,
-        <q cite="https://www.youtube.com/watch?v=EFHyzuqjaok&lc=Ugyc5E5UVyLCcJyc87J4AaABAg">You can't simulate his speeches using intelligence, whether it's artificial or not</q>.
+        <q cite="https://www.youtube.com/watch?v=EFHyzuqjaok&amp;lc=Ugyc5E5UVyLCcJyc87J4AaABAg">You can't simulate his speeches using intelligence, whether it's artificial or not</q>.
       </li>
       <li>Polonski, Vyacheslav W.:
         <a href="https://theconversation.com/how-artificial-intelligence-conquered-democracy-77675">How artificial intelligence conquered democracy</a>,
@@ -1240,7 +1239,7 @@
         <q lang="de">Da Thiel gleichzeitig im Aufsichtsrat von Facebook sitzt, hat er damit ein Unternehmen finanziert, das bewusst gegen dessen Nutzungsbedingungen verstößt.</q>
       </li>
       <li>Perrett, Connor:
-        <a href="https://www.businessinsider.de/international/law-enforcement-using-unknown-facial-recognition-technology-facebook-photos-2020-1/?r=US&IR=T">A startup company took billions of photos from Facebook and other websites to create a facial-recognition database, and hundreds of law-enforcement agencies are using it</a>,
+        <a href="https://www.businessinsider.de/international/law-enforcement-using-unknown-facial-recognition-technology-facebook-photos-2020-1/?r=US&amp;IR=T">A startup company took billions of photos from Facebook and other websites to create a facial-recognition database, and hundreds of law-enforcement agencies are using it</a>,
         <i class="website">Business Insider</i>, 18.01.2020.
         <!--Kirenaga Partners, a small New York-based private equity firm, is also an early investor in Clearview AI, which has also received funding from venture capitalist Peter Thiel, per the report. Thiel – Facebook’s first large outside investor, per CNN – still serves on Facebook’s board of directors.-->
       </li>
@@ -1273,6 +1272,10 @@
         <a href="https://www.heise.de/newsticker/meldung/Bundestag-befragt-Buerger-zu-Kuenstlicher-Intelligenz-4679954.html" hreflang="de">Bundestag befragt Bürger zu Künstlicher Intelligenz </a>,
         <i class="website">heise.de</i></span>, 10.03.2020.
         <br />The federal commission on artificial intelligence had been accused of going about its business behind closed doors.
+      </li>
+      <li><span lang="de">Krempl, Stefan:
+        <a href="https://www.heise.de/news/Automatisierte-Entscheidungen-Nur-wenige-positive-Beispiele-in-Europa-5042852.html" hreflang="de">Automatische Entscheidungen per Algorithmus: Wenige positive Beispiele in Europa</a>,
+        <i class="website">heise online</i>,</span> 02.02.2021.
       </li>
     </ul>
 
@@ -1349,22 +1352,51 @@
       </li>
     </ul>
 
+  <!--
+  <section>
+    <h2></h2>
+    <ul>
+      <li><span lang="de">
+        <a href="" hreflang="de"></a>,
+        <i class=""></i>,</span>
+      </li>
+      <li>
+        <a href=""></a>:
+        <q cite=""></q>
+        <br />:
+        <a href=""></a>
+        <i class=""></i>,
+      </li>
+      <li>
+        <a href=""></a>,
+        <i class=""></i>,
+      </li>
+      <li>
+        <a href=""></a>
+        (<i class="ytchannel"></i> on YouTube, minutes, ).
+      </li>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      <li><span lang="nl">
+        <a href=""></a>,
+        <i class=""></i>,</span>
+      </li>
+    </ul>
+  </section>
+  -->
   </main>
 
   <footer>
     <p class="licence">
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
-      alt="Creative Commons License" style="border-width:0" 
-      src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />
-      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
-      property="dct:title" rel="dct:type">Philosophy and Science</span> by 
-      <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cstrobbe" property="cc:attributionName" 
-      rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a 
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
-      lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
+      <br /><span>Philosophy and Science</span> by
+      <a href="https://github.com/cstrobbe">Christophe Strobbe</a>
+      is licensed under a
+      <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
-    <p><a href="https://github.com/cstrobbe/philosophy-and-science">GitHub repository for
-      <i>Philosophy and Science</i></a>.
+    <p><a href="https://github.com/cstrobbe/philosophy-and-science">GitHub repository for <i>Philosophy and Science</i></a>.
     </p>
   </footer>
 </body>
