Add: h2: Jose Ortega y Gasset

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1788,6 +1788,34 @@
         </li>
       </ul>
 
+      <h3>José Ortega y Gasset (1883 – 1955)</h3>
+      <ul>
+        <li>Ortega y Gasset, José:<span lang="fr">
+          <i class="booktitle">La Déshumanisation de l'art</i>. Traduit de l’espagnol par Bénédicte Vauthier et Adeline Struvay. Allia,</span> 2011. (96 pages)
+          <a href="https://www.editions-allia.com/fr/livre/544/la-deshumanisation-de-l-art" hreflang="fr"><abbr>ISBN</abbr> 979-10-304-1205-5</a>.
+          (<i class="booktitle" lang="es">La deshumanización del arte e Ideas sobre la novela</i>, 1925.)
+        </li>
+        <li>Ortega y Gasset, José:<span lang="fr">
+          <i class="booktitle">L'Histoire comme système</i>. Traduit de l'espagnol par Anne Bardet. Allia,</span> 2016. (96 pages)
+          <a href="https://www.editions-allia.com/fr/livre/728/l-histoire-comme-systeme" hreflang="fr"><abbr>ISBN</abbr> 979-10-304-0071-7</a>.
+          (<i class="booktitle">History as a System</i>, 1935; <i class="booktitle" lang="es">Historia como sistema</i> contained an additional essay.)
+        </li>
+        <li>Ortega y Gasset, José:<span lang="fr">
+          <i class="booktitle">La Mission du bibliothécaire</i>.Traduit de l’espagnol par Mikaël Gómez Guthart. Allia,</span> 	2021. (64 pages)
+          <a href="https://www.editions-allia.com/fr/livre/902/la-mission-du-bibliothecaire" hreflang="fr"><abbr>ISBN</abbr> 979-10-304-1374-8</a>.
+          (Speech at an international conference of librarians in 1935.)
+        </li>
+        <li>Ortega y Gasset, José:<span lang="fr">
+          <i class="booktitle">Méditation sur la technique</i>. Traduit de l'espagnol par David Uzal. Allia,</span> 2017. (128 pages)
+          <a href="https://www.editions-allia.com/fr/livre/788/meditation-sur-la-technique" hreflang="fr"><abbr>ISBN</abbr> 979-10-304-0692-4</a>.
+          (<i class="booktitle" lang="es">Ensimismamiento y alteración. Meditación de la técnica</i>, 1939.)
+        </li>
+        <li>Ortega y Gasset, José:<span lang="fr">
+          <i class="booktitle">Le Mythe de l'homme derrière la technique</i>.  Traduit de l'allemand par Frederic Bourgeois, Claire Mélot et Mathias Rollot. Allia,</span> 2016. (2016 pages)
+          <a href="https://www.editions-allia.com/fr/livre/729/le-mythe-de-l-homme-derriere-la-technique" hreflang="fr"><abbr>ISBN</abbr> 979-10-304-0068-7</a>.
+        </li>
+      </ul>
+
       <h3>Theodor W. Adorno (1903 – 1969)</h3>
       <ul>
         <li>
@@ -3223,7 +3251,10 @@
         <li>Fou-cault-la (Foucault cola),</li>
         <li>Merleau(-Ponty) blanc,</li>
         <li>Hegel bagels,</li>
+        <li>bagels and John Lockes,</li>
         <li>Ryle bread,</li>
+        <li>Eau de Hurlevent,<!--Les Hauts de Hurlevent--></li>
+        <li>Vins Temps-Après,<!--Vingt Ans après #nourriturespirituelle--></li>
         <li>a selection of Socra-teas,</li>
         <li>desserts to be chosen from the Sweet Trolley Problem.</li>
       </ul>
