Add minlength attribute

--- a/complaint-form.html
+++ b/complaint-form.html
@@ -40,7 +40,7 @@
         </select>
       </p>
       <p>
-        <textarea placeholder="Lalala" required="required" rows="10000" cols="78"></textarea>
+        <textarea minlength="1024" placeholder="Lalala" required="required" rows="10000" cols="78"></textarea>
       </p>
       <p><button type="submit">Submit complaint</button></p>
     </form>
