Replace post submit with get submit

--- a/complaint-form.html
+++ b/complaint-form.html
@@ -29,7 +29,7 @@
   <main id="main">
     <p>You have a complaint? Great! Submit it here!</p>
     <p>Form fields with an invisible asterisk are required fields.</p>
-    <form action="404.html" method="post" name="whocares">
+    <form action="404.html" method="get" name="whocares">
       <p><label for="lame-excuse">Type of complaint: </label>
         <select id="lame-excuse" size="1" required="required">
           <option value="" selected="selected">Select your preferred excuse</option>
