Add body class for styling header/h1

--- a/complaint-form.html
+++ b/complaint-form.html
@@ -22,7 +22,7 @@
     .invisible { color: transparent; font-size: 0.1em; }
   </style>
 </head>
-<body>
+<body class="philosophypage">
   <header>
     <h1><span class="h1txt">Complaint Form</span></h1>
   </header>
