Add better placeholder text

--- a/complaint-form.html
+++ b/complaint-form.html
@@ -41,7 +41,7 @@
         </select>
       </p>
       <p><label for="therant">Get creative here. Write at least 1024 characters<span class="invisible">*</span>:</p>
-        <textarea id="therant" minlength="1024" placeholder="Lalala" required="required" rows="10000" cols="78"></textarea>
+        <textarea id="therant" minlength="1024" placeholder="Dies iræ, dies illa / Solvet sæclum in favilla, / Teste David cum Sibylla. " required="required" rows="10000" cols="78"></textarea>
       </p>
       <p><button type="submit">Submit complaint</button></p>
     </form>
