Add: h3: Blaise Pascal

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1503,6 +1503,22 @@
         </li>
       </ul>
 
+      <h3>Blaise Pascal (1623 – 1662)</h3>
+      <ul>
+        <li>Pascal, Blaise:
+          <a href="https://fr.wikisource.org/wiki/Pens%C3%A9es/%C3%89dition_de_Port-Royal"><i class="booktitle">Pensées de M. Pascal sur la religion et sur quelques autres sujets, qui ont esté trouvées après sa mort parmy ses papiers</i></a>.
+          <i class="website">Wikisource</i>.
+        </li>
+        <li>Pascal, Blaise:
+          <a href="https://archive.org/details/thoughtsonreligix00pasc/page/n5/mode/2up"><i class="booktitle">Thoughts on Religion and Other Subjects</i>. Translated from the French</a>.
+          London, 1704. (Digitised version on Archive.org.)
+        </li>
+        <li>Pascal, Blaise:
+          <a href="https://archive.org/details/cu31924029056138"><i class="booktitle">Thoughts on Religion and Other Subjects</i>. Translated into English by Basil Kennet</a>.
+          London: George Routledge and Sons, 1893. (Digitised version on Archive.org.)
+        </li>
+      </ul>
+
       <h3>Baruch Spinoza / Benedict de Spinoza (1632 – 1677)</h3>
       <ul>
         <li>
