Add: Holmes: Ortega y Gasset; Kinzel: 130. Geburtstag

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1830,6 +1830,15 @@
           <i class="booktitle">Le Mythe de l'homme derrière la technique</i>.  Traduit de l'allemand par Frederic Bourgeois, Claire Mélot et Mathias Rollot. Allia,</span> 2016. (2016 pages)
           <a href="https://www.editions-allia.com/fr/livre/729/le-mythe-de-l-homme-derriere-la-technique" hreflang="fr"><abbr>ISBN</abbr> 979-10-304-0068-7</a>.
         </li>
+
+        <li>Holmes, Oliver:
+          <a href="https://plato.stanford.edu/entries/gasset/">José Ortega y Gasset</a>,
+          <i class="website">Stanford Encyclopedia of Philosophy</i>, 07.06.2011, updated on 20.11.2017.
+        </li>
+        <li><span lang="de">Kinzel, Till:
+          <a href="https://sezession.de/38562/130-geburtstag-jose-ortega-y-gasset" hreflang="de">130. Geburtstag José Ortega y Gasset</a>,
+          <i class="website">Sezession</i>,</span> 09.05.2013.
+        </li>
       </ul>
 
       <h3>Theodor W. Adorno (1903 – 1969)</h3>
