Add: more resources about Ortega y Gasset

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1839,6 +1839,22 @@
           <a href="https://sezession.de/38562/130-geburtstag-jose-ortega-y-gasset" hreflang="de">130. Geburtstag José Ortega y Gasset</a>,
           <i class="website">Sezession</i>,</span> 09.05.2013.
         </li>
+        <li>Dobson, Andrew:
+          <i class="booktitle">An Introduction to the Politics and Philosophy of José Ortega y Gasset</i>. Cambridge University Press, 2009. (204 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/philosophy/political-philosophy/introduction-politics-and-philosophy-jose-ortega-y-gasset?format=PB"><abbr>ISBN</abbr> 9780521123310</a>.
+        </li>
+        <li>Graham, John T.:
+          <i class="booktitle">A Pragmatist Philosophy of Life in Ortega y Gasset</i>. University of Missouri Press, 1994. (440 pages)
+          <a href="https://upress.missouri.edu/9780826209382/a-pragmatist-philosophy-of-life-in-ortega-y-gasset/"><abbr>ISBN</abbr> 9780826209382</a>.
+        </li>
+        <li>Graham, John T.:
+          <i class="booktitle">The Social Thought of Ortega y Gasset: A Systematic Synthesis in Postmodernism and Interdisciplinarity</i>. University of Missouri Press, 2001. (568 pages)
+          <a href="https://upress.missouri.edu/9780826213532/the-social-thought-of-ortega-y-gasset/"><abbr>ISBN</abbr> 9780826213532</a>.
+        </li>
+        <li>Blas Gonzalez, Pedro:
+          <i class="booktitle">Ortega's 'The Revolt of the Masses' and the Triumph of the New Man</i>. New York: Algora Publishing, 2007.
+          <abbr>ISBN</abbr> 978-0-87586-470-9.
+        </li>
       </ul>
 
       <h3>Theodor W. Adorno (1903 – 1969)</h3>
