Add: Smith: Irrationality

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -276,7 +276,7 @@
       * Critical Thinking and Academic Writing : https://www.researchgate.net/post/Critical_Thinking_and_Academic_Writing 
       * What are the ways to teach for Critical Thinking Disposition? https://www.researchgate.net/post/What_are_the_ways_to_teach_for_Critical_Thinking_Disposition 
         - has some useful references
-        - see also "Why students do not think critically?" https://www.researchgate.net/post/Why_students_do_not_think_critically 
+        - see also "Why students do not think critically?" https://www.researchgate.net/post/Why_students_do_not_think_critically
       * How could develop critical thinking in students? https://www.researchgate.net/post/How_could_develop_critical_thinking_in_students
         - !! Check "What methods have you found to be effective for helping students improve critical thinking skills? " instead: https://www.researchgate.net/post/What_methods_have_you_found_to_be_effective_for_helping_students_improve_critical_thinking_skills 
       * Hints on strategies to develop independent and critical thinking? https://www.researchgate.net/post/Hints_on_strategies_to_develop_independent_and_critical_thinking 
@@ -538,6 +538,13 @@
     -->
     <h2>Other Links</h2>
     <ul>
+      <li>Smith, Justin E. H.:
+        <i class="booktitle">Irrationality: A History of the Dark Side of Reason</i>. Princeton University Press, 2020. (344 pages)
+        <a href="https://press.princeton.edu/books/paperback/9780691210513/irrationality"><abbr>ISBN</abbr> 9780691210513</a>.
+        <br />From the publisher's book description:
+        <q>In this sweeping account of irrationality from antiquity to the rise of Twitter mobs and the election of Donald Trump, Justin Smith argues that irrationality makes up the greater part of human life and history.
+        Ranging across philosophy, politics, and current events, he shows that, throughout history, every triumph of reason has been temporary and reversible, and that rational schemes often result in their polar opposite. (&hellip;)</q>
+      </li>
       <li>
         <a href="https://www.psiram.com/de/index.php/Hauptseite" hreflang="de" lang="de">Psiram</a>:
         <q>Psiram greift Themen aus der Esoterik, den Grenzwissenschaften und der alternativen Medizin auf und berichtet darüber aus kritischer, aufgeklärter Sicht.</q>
